plugins {
    id 'org.springframework.boot' version '2.5.7'
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    id "org.liquibase.gradle" version "2.0.4"
    id 'java'
}

allprojects {
    gradle.projectsEvaluated {
        tasks.withType(JavaCompile) {
            options.compilerArgs << "-Xmaxerrs" << "1000"
        }
    }
}

group = 'com.oskarro'
version = '0.0.2-SNAPSHOT'
sourceCompatibility = '17'
targetCompatibility = '17'


configurations {
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
    compileOnly {
        extendsFrom annotationProcessor
    }
}

configurations.all {
    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    exclude group: 'org.springframework.boot', module: 'logback-classic'
}

//create a single Jar with all dependencies
bootJar {
    launchScript()
}


repositories {
    mavenCentral()
}

dependencies {

    /* ============ region IMPLEMENTATION ============ */
    // Spring Boot's tomcat application support
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '2.5.7'


    // Spring Boot's JPA support
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')

    // Spring Data REST support
    implementation('org.springframework.boot:spring-boot-starter-data-rest')

    // Spring Security support
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-web'
    implementation 'org.springframework.security:spring-security-test'

    // Library for mapping between model and DTO
    implementation 'org.mapstruct:mapstruct:1.3.1.Final'

    // Library for detecting N+1 queries
    implementation 'com.yannbriancon:spring-hibernate-query-utils:1.0.3'

    /* ============ endregion IMPLEMENTATION ============ */


    /* ============ region COMPILE ============ */
    // Email support
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.5.7'

    // Cache libraries
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: '2.5.7'
    implementation group: 'javax.cache', name: 'cache-api', version: '1.1.1'
    implementation group: 'org.ehcache', name: 'ehcache', version: '3.9.0'


    // Lombok auto-generates things like getters and setters
    compileOnly 'org.projectlombok:lombok:1.18.20'


    // Libraries for liquibase
//    compile group: 'org.liquibase', name: 'liquibase-core', version: '4.1.1'

    // PostgresSQL-specific connector for JPA
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.1'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.5.7'

    // Libraries for logging
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.0'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.0'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-log4j2', version: '2.5.7'


    // Set of libraries for authentication methods
    implementation group: 'org.json', name: 'json', version: '20090211'
    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.3'
    implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.5.0'
    implementation group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: '5.5.0'
    implementation group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.5.0.RELEASE'
    implementation group: 'org.springframework.security.oauth.boot', name: 'spring-security-oauth2-autoconfigure', version: '2.5.7'

    // Libraries for minimizing users avatar
    implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'
    implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.1'
    implementation group: 'com.mortennobel', name: 'java-image-scaling', version: '0.8.5'

    // Libraries for metrics and statistics
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.5.7'
    implementation group: 'io.micrometer', name: 'micrometer-core', version: '1.5.1'
    implementation group: 'io.micrometer', name: 'micrometer-registry-prometheus', version: '1.5.1'

    // For Java 8 Date/Time Support
    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.11.0'

    // Libraries for plugin handling
    implementation group: 'commons-io', name: 'commons-io', version: '2.7'
    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'

    // Other plugins
    implementation group: 'org.javatuples', name: 'javatuples', version: '1.2'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'


    /* ============ endregion COMPILE ============ */


    /* ============ region TEST ============ */
    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.5.7'
    testCompileOnly 'org.projectlombok:lombok:1.18.20'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'

    /* ============ endregion TEST ============ */


    /* ============ region OTHER ============ */
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    implementation 'org.junit.jupiter:junit-jupiter'

    /* ============ endregion OTHER ============ */
}


test {
    useJUnitPlatform()
}

jar {
    baseName = 'muzikum'
    version = version
}

bootRun {
    if (project.hasProperty('args')) {
        args project.args.split(',')
    }
}
